pkginclude_HEADERS = fastrest/server.hpp fastrest/controller.hpp

rapidjsonincludedir = $(includedir)/fastrest/rapidjson
rapidjsoninclude_HEADERS = ../ext/rapidjson/document.h ../ext/rapidjson/filestream.h \
	../ext/rapidjson/prettywriter.h ../ext/rapidjson/rapidjson.h ../ext/rapidjson/reader.h \
	../ext/rapidjson/stringbuffer.h ../ext/rapidjson/writer.h

rapidjsoninternalincludedir = $(includedir)/fastrest/rapidjson/internal
rapidjsoninternalinclude_HEADERS = ../ext/rapidjson/internal/pow10.h \
	../ext/rapidjson/internal/stack.h ../ext/rapidjson/internal/strfunc.h
